--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/fav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cool app</title>
+    <title>Rock, Papers, Scissors, Lizard, Spock</title>
   </head>
   <body class="bg-light">
     <div id="root"></div>
